load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "inventory",
    srcs = ["ansible/inventory/inventory.py"],
    data = glob(["env/**/*"]),
    deps = [
        requirement("ansible"),
    ],
)
