load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "exporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/dfinity/ic/bazel/exporter",
    visibility = ["//visibility:private"],
    deps = [
        # Keep sorted.
        "//bazel/proto:build_event_stream_go_proto",
        "@com_github_golang_protobuf//proto",
        "@com_github_honeycombio_beeline_go//:beeline-go",
        "@org_golang_google_genproto//googleapis/bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_binary(
    name = "exporter",
    embed = [":exporter_lib"],
    visibility = ["//visibility:public"],
)
