load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    deps = [
        # Keep sorted.
        ":command_line_proto",
        ":failure_details_proto",
        ":invocation_policy_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "command_line_proto",
    srcs = ["command_line.proto"],
    deps = [
        # Keep sorted.
        ":option_filters_proto",
    ],
)

proto_library(
    name = "failure_details_proto",
    srcs = [
        "failure_details.proto",
    ],
    deps = [
        # Keep sorted.
        "@com_google_protobuf//:descriptor_proto",
    ],
)

proto_library(
    name = "option_filters_proto",
    srcs = ["option_filters.proto"],
)

proto_library(
    name = "invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
)

go_proto_library(
    name = "command_line_go_proto",
    importpath = "github.com/dfinity/ic/proto/command_line",
    proto = ":command_line_proto",
    deps = [
        # Keep sorted.
        ":option_filters_go_proto",
    ],
)

go_proto_library(
    name = "option_filters_go_proto",
    importpath = "github.com/dfinity/ic/proto/options",
    proto = ":option_filters_proto",
)

go_proto_library(
    name = "failure_details_go_proto",
    importpath = "github.com/dfinity/ic/proto/failure_details",
    proto = ":failure_details_proto",
)

go_proto_library(
    name = "invocation_policy_go_proto",
    importpath = "github.com/dfinity/ic/proto/blaze.invocation_policy",
    proto = ":invocation_policy_proto",
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/dfinity/ic/proto/build_event_stream",
    proto = ":build_event_stream_proto",
    deps = [
        # Keep sorted.
        ":command_line_go_proto",
        ":failure_details_go_proto",
        ":invocation_policy_go_proto",
    ],
)
