load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//bazel:transitions.bzl", "opt_debug_binary")

rust_binary(
    name = "debug_assertions_on",
    srcs = ["src/main.rs"],
)

opt_debug_binary(
    name = "debug_assertions_off",
    binary = ":debug_assertions_on",
)

sh_test(
    name = "debug_assertion_test",
    srcs = ["debug_assertion_test.sh"],
    data = [
        ":debug_assertions_off",
        ":debug_assertions_on",
    ],
    env = {
        "DEBUG_ASSERTIONS_OFF_BIN": "$(rootpath :debug_assertions_off)",
        "DEBUG_ASSERTIONS_ON_BIN": "$(rootpath :debug_assertions_on)",
    },
)
