# See https://lamport.azurewebsites.net/tla/tools.html for the
# description of the TLA+ command-line tools.

load("@rules_java//java:java_binary.bzl", "java_binary")

COMMON_DEPS = [
    # Keep sorted.
    "//third_party/tlaplus-1.8.0:tla2tools",
    "@tlaplus_community_modules//jar",
    "@tlaplus_community_modules_deps//jar",
]

java_binary(
    name = "sany",
    main_class = "tla2sany.SANY",
    visibility = ["//visibility:public"],
    runtime_deps = COMMON_DEPS,
)

java_binary(
    name = "tlc",
    main_class = "tlc2.TLC",
    visibility = ["//visibility:public"],
    runtime_deps = COMMON_DEPS,
)

java_binary(
    name = "tla2latex",
    main_class = "tla2tex.TLA",
    visibility = ["//visibility:public"],
    runtime_deps = COMMON_DEPS,
)
