load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")

proto_library(
    name = "buildbuddy_proto",
    srcs = glob(["buildbuddy_proto/**/*.proto"]),
    import_prefix = "proto/",
    strip_import_prefix = "/ci/githubstats/buildbuddy_proto",
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

py_proto_library(
    name = "buildbuddy_py_proto",
    visibility = ["//ci/githubstats:__pkg__"],
    deps = [":buildbuddy_proto"],
)

py_binary(
    name = "query",
    srcs = ["query.py"],
    data = glob(["*.sql"]) + ["//.github:CODEOWNERS"],
    env = {"CODEOWNERS_PATH": "$(rootpath //.github:CODEOWNERS)"},
    deps = [
        ":buildbuddy_py_proto",
        requirement("pandas"),
        requirement("psycopg"),
        requirement("requests"),
        requirement("codeowners"),
        requirement("tabulate"),
        requirement("protobuf"),
    ],
)

sh_test(
    name = "query_help_test",
    srcs = ["query_help_test.sh"],
    data = [":query"],
    env = {"QUERY_PATH": "$(rootpath :query)"},
)
