[package]
name = "json5test"
version = "0.1.0"
authors = ["The Internet Computer Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106", features = ["derive"]}
json5 = "0.2.7"
