[package]
name = "load_sink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.7"
atomic-counter = "1.0.1"
# Same versions as ic-workload-generator
serde = { version = "1.0.99", features = [ "derive" ] }
serde_cbor = "0.10"
# Same versions as ic-types
serde_bytes = "0.11"
