[package]
name = "load_sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.7"
atomic-counter = "1.0.1"
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
