[package]
name = "load_sink"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.7"
atomic-counter = "1.0.1"
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
