[package]
name = "qos"
version = "0.1.0"
authors = ["The Internet Computer Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
actix-rt = "1.0.0"
async-trait = "0.1.31"
clap = "2.33.0"
futures = "0.3.5"
tokio = { version = "1.2.0", features = ["rt-threaded", "macros", "tcp", "dns", "io-util", "blocking", "time", "sync"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test_client"
path = "src/test_client.rs"

[[bin]]
name = "test_server"
path = "src/test_server.rs"
